[package]
name = "oners-server"
version = "0.0.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
rand_derive = "0.5"
strum_macros ="0.24"
serenity = {git="https://github.com/serenity-rs/serenity.git", branch="current", default-features = false, features = ["client", "gateway", "rustls_backend", "model"]}
tokio = {version="1.17", features=["macros", "rt-multi-thread"]}
liboners = {git="https://github.com/parkcitymedia/liboners.git",branch="main"}